fix Since "similar items" change, it flashes onLoad before collapsing

--- a/htdocs/sites/all/themes/mc_base/css/all.less
+++ b/htdocs/sites/all/themes/mc_base/css/all.less
@@ -3279,7 +3279,11 @@ body.page-user .view-my-groups ul {
 
     .duplicates{
       background-color: #f4f4f4;
+      .event{
+        display: none;
+      }
       .event.first{
+        display: block;
         background-color: #ffffff;
       }
     }
@@ -3739,17 +3743,5 @@ ul.mc-links-blue {
   }
   li:last-child {
     margin-bottom:0px;
-  }
-}
-
-.view-mc-news-sections{
-  .feed-icon{
-    display: none;
-  }
-}
-
-body.not-logged-in{
-  .hide-anonymous{
-    display: none;
   }
 }
